[package]
name = "gitlet-rs"
version = "0.1.0"
edition = "2024"
author = "David Rambo <davidrambo@mailfence.com>"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["derive"] }
hex = "0.4.3"
sha1 = "0.10.6"

[dev-dependencies]
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
predicates = "3.1.3"

[[bin]]
name = "gitlet"
path = "src/main.rs"
